code x afficher 6 colonne smax déplacé

--- a/notebook/ANAP.ipynb
+++ b/notebook/ANAP.ipynb
@@ -32,18 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "#For display shorter dataframes\n",
-    "pd.set_option(\"display.max_rows\", 6)"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -62,13 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
+    "#For display shorter dataframes\n",
+    "pd.set_option(\"display.max_rows\", 6)\n",
     "\n",
     "datapath = \"../challenge_28_data/\"\n",
     "trainf = \"data2.csv\"\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -89,7 +89,7 @@
        "'../challenge_28_data/data2.csv'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -128,12 +128,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On se rend compte que [pandas](http://pandas.pydata.org) crée automatiquement une colonne index. On enlève également la première colonne considérée pour le moment comme inutile."
+    "On se rend compte que [pandas](http://pandas.pydata.org) crée automatiquement une colonne index. On enlève également la première colonne (Finess) considérée pour le moment comme inutile."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +308,7 @@
        "[1879841 rows x 8 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -355,7 +355,7 @@
        " 'annee']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +385,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -407,15 +407,14 @@
        "cible1                                               float64\n",
        "Raison sociale                                        object\n",
        "Provenance des patients (département)                 object\n",
-       "Domaines d activités                                  object\n",
-       "âge (deux classes >75 ans, <= 75 ans)                 object\n",
+       "                                                      ...   \n",
        "Nombre de séjours/séances MCO des patients en ALD      int64\n",
        "Nombre total de séjours/séances                        int64\n",
        "annee                                                  int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
